2016-02-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: In GSCurrentThread() the check for exiting
	thread needs to NOT be wrapped in an exception handler, since the
	exception handling code can attempt to get the current thread,
	causing recursion.

2016-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSUserDefaults.m:
	Remove dependency on NSUserDefaults in order to parse property list
	in program arguments ... get boolean defaults settings from the
	argument domain

2016-02-09  Larry Campbell <lcampbel@akamai.com>

	* Source/NSUserDefaults.m: Fix for bug #46956

2016-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gdomap.c: Use uint32_t rather than unsigned long ... we are
	actually dealing with 4 byte values (from htonl), not native longs,
	and this can result in buffer overrun when we try copying a 64bit
	value into a 32bit buffer on a 64bit system.

2016-02-04  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: Fix for decoding base64 with unknown characters
	after a trailing '='

2016-01-29  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m: keep key=value pairs in structured fields
	on the same line if possible.

2016-01-29	Niels Grewe <niels.grewe@halbordnung.de>

	* Source/NSThread.m: Automatic 'late' unregistration of thread objects:
	When +exit is not called, we no longer log a warning and leak the
	thread object.
	Instead, we add it to a map table, keyed under the current thread ID,
	and use that in GSCurrentThread() to find the correct NSThread object
	if pthread_getspecific wont return it to us. 
	* Tests/base/NSThread/late_unregister.m: Test case for late
	unregistration.

2016-01-21	Niels Grewe <niels.grewe@halbordnung.de>

	* Source/Additions/GSMime.m: Fix folding of headers containing
	a '_' character.

2016-01-21	Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/GSMime/general.m: Test case for quoted boundary
	parameter failure.

2016-01-21  Richard Frith-Macdonald <rfm@gnu.org>
